Create: Delete-User component

--- a/frontend/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/frontend/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -46,7 +46,7 @@
         <div class="card p-5 wow fadeInUp">
           <div class="header d-flex justify-content-between align-items-center mb-4">
             <h2 class="display-6 text-center text-danger">Admin Dashboard</h2>
-           
+
           </div>
 
           <div class="text-center">
@@ -57,7 +57,7 @@
 
           <div class="row">
             <div class="col-md-4 mb-4">
-              <button class="btn service-btn">
+              <button  class="btn service-btn">
                 <i class="fas fa-database"></i> Backup Service
               </button>
             </div>
@@ -82,7 +82,7 @@
               </button>
             </div>
             <div class="col-md-4 mb-4">
-              <button class="btn service-btn">
+              <button routerLink="/user-dashboard" class="btn service-btn">
                 <i class="fas fa-users"></i> User Service
               </button>
             </div>
