--- a/frontend/src/app/components/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/components/user-dashboard/user-dashboard.component.html
@@ -57,7 +57,7 @@
 
           <div class="row">
             <div class="col-md-4 mb-4">
-              <button class="btn service-btn">
+              <button routerLink="/create-user" class="btn service-btn">
                 <i class="fas fa-user-plus"></i> Create User
                </button>
             </div>
@@ -67,7 +67,7 @@
               </button>
               </div>
             <div class="col-md-4 mb-4">
-              <button class="btn service-btn">
+              <button routerLink="/delete-user" class="btn service-btn">
                 <i class="fas fa-user-times"></i> Delete User
               </button>
             </div>
