--- a/frontend/src/app/components/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/components/user-dashboard/user-dashboard.component.html
@@ -62,7 +62,7 @@
                </button>
             </div>
             <div class="col-md-4 mb-4">
-              <button class="btn service-btn">
+              <button routerLink="/update-user" class="btn service-btn">
                 <i class="fas fa-user-edit"></i> Update User
               </button>
               </div>
