fix: deleted register button

--- a/frontend/src/app/components/home-layout-component/home-layout-component.component.html
+++ b/frontend/src/app/components/home-layout-component/home-layout-component.component.html
@@ -25,10 +25,10 @@
           <a href="/login" class="btn btn-outline-danger btn-sm rounded-pill mx-2 d-flex align-items-center">
             <i class="fas fa-sign-in-alt me-2"></i> Login
           </a>
-           <!-- Register Button -->
-           <a href="/register" class="btn btn-danger btn-sm rounded-pill mx-2 d-flex align-items-center">
-            <i class="fas fa-user-plus me-2"></i> Register
-          </a>
+<!--           &lt;!&ndash; Register Button &ndash;&gt;-->
+<!--           <a href="/register" class="btn btn-danger btn-sm rounded-pill mx-2 d-flex align-items-center">-->
+<!--            <i class="fas fa-user-plus me-2"></i> Register-->
+<!--          </a>-->
       </div>
     </div>
   </nav>
