--- a/frontend/src/app/components/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/components/user-dashboard/user-dashboard.component.html
@@ -1,3 +1,9 @@
+<div class="body">
+
+
+
+
+
 <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
   <div class="spinner-border text-danger" role="status" style="width: 3rem; height: 3rem;"></div>
 </div>
@@ -57,32 +63,32 @@
 
           <div class="row">
             <div class="col-md-4 mb-4">
-              <button routerLink="/create-user" class="btn service-btn">
+              <button routerLink="/create-user" class="btn service-btn1">
                 <i class="fas fa-user-plus"></i> Create User
                </button>
             </div>
             <div class="col-md-4 mb-4">
-              <button routerLink="/update-user" class="btn service-btn">
+              <button routerLink="/update-user" class="btn service-btn2">
                 <i class="fas fa-user-edit"></i> Update User
               </button>
               </div>
             <div class="col-md-4 mb-4">
-              <button routerLink="/delete-user" class="btn service-btn">
+              <button routerLink="/delete-user" class="btn service-btn3">
                 <i class="fas fa-user-times"></i> Delete User
               </button>
             </div>
             <div class="col-md-4 mb-4">
-              <button class="btn service-btn">
+              <button outerLink="/asign-role" class="btn service-btn4">
                 <i class="fas fa-cogs"></i> Assign Role
               </button>
             </div>
             <div class="col-md-4 mb-4">
-              <button class="btn service-btn">
+              <button class="btn service-btn5">
                 <i class="fas fa-tasks"></i> Set Quota
               </button>
             </div>
             <div class="col-md-4 mb-4">
-              <button class="btn service-btn">
+              <button class="btn service-btn6">
                 <i class="fas fa-users"></i> View Users
               </button>
             </div>
@@ -92,4 +98,6 @@
       </div>
     </div>
   </div>
+</div>
+
 </div>
