--- a/frontend/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/frontend/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -67,7 +67,7 @@
               </button>
             </div>
             <div class="col-md-4 mb-4">
-              <button class="btn service-btn">
+              <button routerLink="/optimization" class="btn service-btn">
                 <i class="fas fa-tools"></i> Optimization
               </button>
             </div>
