Update: Fix backend 'UserController'

--- a/frontend/src/app/components/admin-dashboard/admin-dashboard.component.css
+++ b/frontend/src/app/components/admin-dashboard/admin-dashboard.component.css
@@ -311,3 +311,12 @@
 .team-social .btn:hover {
   background-color: #c52828;
 }
+
+
+
+.body
+{
+  background-color: #ffdbdb;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+}
