--- a/frontend/src/app/components/asign-role/asign-role.component.css
+++ b/frontend/src/app/components/asign-role/asign-role.component.css
@@ -61,3 +61,14 @@ button:hover {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+
+.body
+{
+  background-color: #ffdbdb;
+  margin-bottom: 0px;
+  padding-bottom: 900px;
+
+}
+
+
