--- a/frontend/src/app/components/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/components/user-dashboard/user-dashboard.component.html
@@ -2,8 +2,6 @@
 
 
 
-
-
 <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
   <div class="spinner-border text-danger" role="status" style="width: 3rem; height: 3rem;"></div>
 </div>
@@ -78,7 +76,7 @@
               </button>
             </div>
             <div class="col-md-4 mb-4">
-              <button outerLink="/asign-role" class="btn service-btn4">
+              <button routerLink="/asign-role" class="btn service-btn4">
                 <i class="fas fa-cogs"></i> Assign Role
               </button>
             </div>
@@ -101,3 +99,4 @@
 </div>
 
 </div>
+
