--- a/frontend/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/frontend/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -1,3 +1,5 @@
+<div class="body">
+
 <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
   <div class="spinner-border text-danger" role="status" style="width: 3rem; height: 3rem;"></div>
 </div>
@@ -91,4 +93,7 @@
       </div>
     </div>
   </div>
+</div>
+
+
 </div>
