--- a/frontend/src/app/components/success-page/success-page.component.html
+++ b/frontend/src/app/components/success-page/success-page.component.html
@@ -15,7 +15,7 @@
           </div>
 
           <div class="text-center">
-            <a routerLink="/admin-dashboard" class="btn btn-success w-100 py-3">
+            <a href="/admin-dashboard" class="btn btn-success w-100 py-3">
               <i class="fas fa-arrow-left me-2"></i>Go Back to Dashboard
             </a>
           </div>
