--- a/frontend/src/app/components/update-user/update-user.component.css
+++ b/frontend/src/app/components/update-user/update-user.component.css
@@ -91,3 +91,12 @@ h2 {
     font-size: 1.8rem;
   }
 }
+
+
+
+.body
+{
+  background-color: #ffdbdb;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+}
