--- a/frontend/src/app/components/create-user/create-user.component.html
+++ b/frontend/src/app/components/create-user/create-user.component.html
@@ -1,3 +1,9 @@
+<div class="body">
+
+  <div>
+    <app-navbar></app-navbar>
+  </div>
+
 <div class="container-xxl py-5">
   <div class="container">
     <div class="row justify-content-center">
@@ -55,4 +61,6 @@
       </div>
     </div>
   </div>
+</div>
+
 </div>
