Update: delete-user-component work with success with backend

--- a/frontend/src/app/components/update-user/update-user.component.html
+++ b/frontend/src/app/components/update-user/update-user.component.html
@@ -1,3 +1,9 @@
+<div class="body">
+
+  <div>
+    <app-navbar></app-navbar>
+  </div>
+  
 <div class="container-xxl py-5">
   <div class="container">
     <div class="row justify-content-center">
@@ -50,4 +56,6 @@
       </div>
     </div>
   </div>
+</div>
+
 </div>
