Create: create-tablespace component

--- a/frontend/src/app/components/set-quota/set-quota.component.html
+++ b/frontend/src/app/components/set-quota/set-quota.component.html
@@ -28,14 +28,14 @@
                 <label for="username"><i class="fas fa-user-edit me-2"></i>Username</label>
               </div>
 
-              <!-- Roles Field -->
+              <!-- quota Field -->
               <div class="form-floating mb-3">
                 <input
                   type="text"
                   class="form-control"
-                  id="roles"
-                  placeholder="Roles"
-                  formControlName="roles"
+                  id="quota"
+                  placeholder="quota"
+                  formControlName="quota"
                   required>
                 <label for="quota"><i class="fas fa-users me-2"></i>Quota</label>
               </div>
