--- a/frontend/src/app/components/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/components/user-dashboard/user-dashboard.component.html
@@ -81,7 +81,7 @@
               </button>
             </div>
             <div class="col-md-4 mb-4">
-              <button class="btn service-btn5">
+              <button routerLink="/Set-Quota" class="btn service-btn5">
                 <i class="fas fa-tasks"></i> Set Quota
               </button>
             </div>
