--- a/frontend/src/app/components/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/components/user-dashboard/user-dashboard.component.html
@@ -86,8 +86,8 @@
               </button>
             </div>
             <div class="col-md-4 mb-4">
-              <button class="btn service-btn6">
-                <i class="fas fa-users"></i> View Users
+              <button routerLink="/create-tablespace" class="btn service-btn6">
+                <i class="fas fa-users"></i> TableSpaces
               </button>
             </div>
 
