feat: set up first part of backup frontend

--- a/frontend/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/frontend/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -57,7 +57,7 @@
 
           <div class="row">
             <div class="col-md-4 mb-4">
-              <button  class="btn service-btn">
+              <button routerLink="/backup" class="btn service-btn">
                 <i class="fas fa-database"></i> Backup Service
               </button>
             </div>
