--- a/frontend/src/app/components/shared/particules/particules.component.html
+++ b/frontend/src/app/components/shared/particules/particules.component.html
@@ -1,1 +1,7 @@
-<p>particules works!</p>
+<div id="tsparticles-container">
+  <tsparticles
+    [id]="id"
+    [options]="particlesOptions"
+    (particlesInit)="particlesInit($event)">
+  </tsparticles>
+</div>
